--- a/Normal_distribution.ipynb
+++ b/Normal_distribution.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Introduction\" data-toc-modified-id=\"Introduction-1\">Introduction</a></span></li><li><span><a href=\"#Normal-Distribution-Probability-Density-Function\" data-toc-modified-id=\"Normal-Distribution-Probability-Density-Function-2\">Normal Distribution Probability Density Function</a></span><ul class=\"toc-item\"><li><span><a href=\"#norm.pdf-value\" data-toc-modified-id=\"norm.pdf-value-2.1\"><code>norm.pdf</code> value</a></span></li><li><span><a href=\"#Normal-distribution-PDF-with-different-standard-deviations\" data-toc-modified-id=\"Normal-distribution-PDF-with-different-standard-deviations-2.2\">Normal distribution PDF with different standard deviations</a></span></li><li><span><a href=\"#Normal-distribution-PDF-with-different-means\" data-toc-modified-id=\"Normal-distribution-PDF-with-different-means-2.3\">Normal distribution PDF with different means</a></span></li></ul></li><li><span><a href=\"#Using-random-normal-distribution-values\" data-toc-modified-id=\"Using-random-normal-distribution-values-3\">Using random normal distribution values</a></span></li><li><span><a href=\"#Cumulative-normal-distribution-function\" data-toc-modified-id=\"Cumulative-normal-distribution-function-4\">Cumulative normal distribution function</a></span></li><li><span><a href=\"#Calculating-probability-of-normal-distribution\" data-toc-modified-id=\"Calculating-probability-of-normal-distribution-5\">Calculating probability of normal distribution</a></span><ul class=\"toc-item\"><li><span><a href=\"#Interval-between-variables\" data-toc-modified-id=\"Interval-between-variables-5.1\">Interval between variables</a></span></li></ul></li><li><span><a href=\"#Finding-quantiles\" data-toc-modified-id=\"Finding-quantiles-6\">Finding quantiles</a></span><ul class=\"toc-item\"><li><span><a href=\"#Percent-point-function\" data-toc-modified-id=\"Percent-point-function-6.1\">Percent point function</a></span></li><li><span><a href=\"#Inverse-survival-function\" data-toc-modified-id=\"Inverse-survival-function-6.2\">Inverse survival function</a></span></li><li><span><a href=\"#Interval-around-the-mean\" data-toc-modified-id=\"Interval-around-the-mean-6.3\">Interval around the mean</a></span></li></ul></li><li><span><a href=\"#Multivariate-Normal-Distribution\" data-toc-modified-id=\"Multivariate-Normal-Distribution-7\">Multivariate Normal Distribution</a></span></li><li><span><a href=\"#Standard-normal-distribution\" data-toc-modified-id=\"Standard-normal-distribution-8\">Standard normal distribution</a></span><ul class=\"toc-item\"><li><span><a href=\"#Standardized-normal-variable\" data-toc-modified-id=\"Standardized-normal-variable-8.1\">Standardized normal variable</a></span></li><li><span><a href=\"#Finding-the-standard-normal-value\" data-toc-modified-id=\"Finding-the-standard-normal-value-8.2\">Finding the standard normal value</a></span></li></ul></li><li><span><a href=\"#References\" data-toc-modified-id=\"References-9\">References</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Introduction\" data-toc-modified-id=\"Introduction-1\">Introduction</a></span></li><li><span><a href=\"#Normal-Distribution-Probability-Density-Function\" data-toc-modified-id=\"Normal-Distribution-Probability-Density-Function-2\">Normal Distribution Probability Density Function</a></span><ul class=\"toc-item\"><li><span><a href=\"#norm.pdf-value\" data-toc-modified-id=\"norm.pdf-value-2.1\"><code>norm.pdf</code> value</a></span></li><li><span><a href=\"#Normal-distribution-PDF-with-different-standard-deviations\" data-toc-modified-id=\"Normal-distribution-PDF-with-different-standard-deviations-2.2\">Normal distribution PDF with different standard deviations</a></span></li><li><span><a href=\"#Normal-distribution-PDF-with-different-means\" data-toc-modified-id=\"Normal-distribution-PDF-with-different-means-2.3\">Normal distribution PDF with different means</a></span></li></ul></li><li><span><a href=\"#Using-random-normal-distribution-values\" data-toc-modified-id=\"Using-random-normal-distribution-values-3\">Using random normal distribution values</a></span></li><li><span><a href=\"#Cumulative-normal-distribution-function\" data-toc-modified-id=\"Cumulative-normal-distribution-function-4\">Cumulative normal distribution function</a></span></li><li><span><a href=\"#Calculating-probability-of-normal-distribution\" data-toc-modified-id=\"Calculating-probability-of-normal-distribution-5\">Calculating probability of normal distribution</a></span><ul class=\"toc-item\"><li><span><a href=\"#Interval-between-variables\" data-toc-modified-id=\"Interval-between-variables-5.1\">Interval between variables</a></span></li></ul></li><li><span><a href=\"#Finding-quantiles\" data-toc-modified-id=\"Finding-quantiles-6\">Finding quantiles</a></span><ul class=\"toc-item\"><li><span><a href=\"#Percent-point-function\" data-toc-modified-id=\"Percent-point-function-6.1\">Percent point function</a></span></li><li><span><a href=\"#Inverse-survival-function\" data-toc-modified-id=\"Inverse-survival-function-6.2\">Inverse survival function</a></span></li><li><span><a href=\"#Interval-around-the-mean\" data-toc-modified-id=\"Interval-around-the-mean-6.3\">Interval around the mean</a></span></li></ul></li><li><span><a href=\"#Multivariate-Normal-Distribution\" data-toc-modified-id=\"Multivariate-Normal-Distribution-7\">Multivariate Normal Distribution</a></span></li><li><span><a href=\"#Standard-normal-distribution\" data-toc-modified-id=\"Standard-normal-distribution-8\">Standard normal distribution</a></span><ul class=\"toc-item\"><li><span><a href=\"#Standardized-normal-variable\" data-toc-modified-id=\"Standardized-normal-variable-8.1\">Standardized normal variable</a></span></li><li><span><a href=\"#Finding-the-standard-normal-value\" data-toc-modified-id=\"Finding-the-standard-normal-value-8.2\">Finding the standard normal value</a></span></li></ul></li><li><span><a href=\"#Conclusion\" data-toc-modified-id=\"Conclusion-9\">Conclusion</a></span></li><li><span><a href=\"#References\" data-toc-modified-id=\"References-10\">References</a></span></li></ul></div>"
    ]
   },
   {
@@ -16,9 +16,9 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "[Normal distributions](https://www.wikiwand.com/en/Normal_distribution) are often used in the natural and social sciences to represent real-valued random variables whose distributions are not known. The Normal distribution is a continuous theoretical probability distribution. In this article I am going to explore the Normal distribution using Jupyter.\n",
+    "[Normal distributions](https://www.wikiwand.com/en/Normal_distribution) are often used in the natural and social sciences to represent real-valued random variables whose distributions are not known. The Normal distribution is a continuous theoretical probability distribution. In this article, I am going to explore the Normal distribution using Jupyter.\n",
     "\n",
-    "Let's import all necessary libraries."
+    "Let's import all the necessary libraries."
    ]
   },
   {
@@ -1058,48 +1058,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1109,13 +1067,6 @@
     "- http://kaisk.hatenadiary.com/entry/2015/02/17/192955\n",
     "- https://stackoverflow.com/questions/38698277/plot-normal-distribution-in-3d"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
