--- a/Normal_distribution.ipynb
+++ b/Normal_distribution.ipynb
@@ -54,7 +54,7 @@
     "X \\sim N(\\mu,\\sigma^2) \\\\\n",
     "$$\n",
     "\n",
-    "The area under the curve equals to 1.\n",
+    "The area under the curve equals 1.\n",
     "\n",
     "$$\n",
     "\\int \\limits _{-\\infty} ^{+\\infty}f(x)dx=1\n",
@@ -67,7 +67,7 @@
    "source": [
     "## `norm.pdf` value\n",
     "\n",
-    "`norm.pdf` retuns a pdf value. The following is the pdf value when $x=1, \\mu=0, \\sigma=1$."
+    "`norm.pdf` retuns a pdf value. The following is the pdf value when $x=1$, $\\mu=0$, $\\sigma=1$."
    ]
   },
   {
@@ -165,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A normal curve is a smooth bell-shaped. It is symmetrical about the $x=\\mu$, and has a maximum point at $x=\\mu$."
+    "A normal curve is smooth bell-shaped. It is symmetrical about the $x=\\mu$, and has a maximum point at $x=\\mu$."
    ]
   },
   {
@@ -181,7 +181,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`scipy.norm.pdf` has keywards, `loc` and `scale`. The location (loc) keyword specifies the mean and the scale (scale) keyword specifies the standard deviation."
+    "`scipy.norm.pdf` has keywords, `loc` and `scale`. The location (loc) keyword specifies the mean and the scale (scale) keyword specifies the standard deviation."
    ]
   },
   {
@@ -224,7 +224,7 @@
    "source": [
     "## Normal distribution PDF with different means\n",
     "\n",
-    "Let's plot normal distribution probability distribution functions where standard deviation is 0 and different means."
+    "Let's plot normal distribution probability distribution functions where the standard deviation is 0 and different means."
    ]
   },
   {
@@ -267,7 +267,7 @@
    "source": [
     "# Using random normal distribution values\n",
     "\n",
-    "`norm.rvs` generates random normal distribution numbers according to the `scale` which is the standard deviation, the `loc` which is the mean and the size."
+    "`norm.rvs` generates random normal distribution numbers according to the `scale` which is the standard deviation, the `loc` which is the mean and the size. We create a histogram for the generated numbers and add the PDF."
    ]
   },
   {
@@ -366,7 +366,9 @@
    "source": [
     "# Calculating probability of normal distribution\n",
     "\n",
-    "Given the mean of 3 and the standard deviation of 2, $X \\sim N(3,2^2)$ we can find the probability of $P(X<2)$.\n",
+    "Given the mean of 3 and the standard deviation of 2,  we can find the probability of $P(X<2)$.\n",
+    "\n",
+    "$$X \\sim N(3,2^2)$$\n",
     "\n",
     "In `norm.cdf`, the location (loc) keyword specifies the mean and the scale (scale) keyword specifies the standard deviation."
    ]
@@ -443,7 +445,9 @@
    "source": [
     "## Interval between variables\n",
     "\n",
-    "To find the probability of an interval between certain variables, you need to subtract `cdf` from another `cdf`. Let's find $P(0.5<X<2)$ with the mean of 1 and standard deviation of 2, $X \\sim N(1,2^2)$."
+    "To find the probability of an interval between certain variables, you need to subtract `cdf` from another `cdf`. Let's find $P(0.5<X<2)$ with a mean of 1 and a standard deviation of 2.\n",
+    "\n",
+    "$$X \\sim N(1,2^2)$$"
    ]
   },
   {
@@ -470,7 +474,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Graph of $X \\sim N(1,2^2), P(0.5<X<2)$"
+    "Here is the graph. $$X \\sim N(1,2^2), P(0.5<X<2)$$"
    ]
   },
   {
@@ -640,7 +644,9 @@
     "## Percent point function\n",
     "\n",
     "`ppf` is the inverse of `cdf` and it is called Percent point function.\n",
-    "Given the mean of 1 and the standard deviation of 3, $X \\sim N(1,3^2)$, we can find the quantile `a` in $P(X<a)=0.506$ by using `ppf`. "
+    "Given the mean of 1 and the standard deviation of 3, we can find the quantile `a` in $P(X<a)=0.506$ by using `ppf`. \n",
+    "\n",
+    "$$X \\sim N(1,3^2)$$"
    ]
   },
   {
@@ -662,13 +668,6 @@
    "source": [
     "norm.ppf(q=0.506, loc=1, scale=3)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -719,7 +718,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With the same mean and standard deviation, $X \\sim N(1,3^2)$, we can find the quantile `b` in $P(X>b)=0.198$ using the inverse survival function `isf`. This is the same as using `ppf` with $q=(1-0.198)$.\n"
+    "With the same mean and standard deviation, we can find the quantile `b` in $P(X>b)=0.198$ using the inverse survival function `isf`. This is the same as using `ppf` with $q=(1-0.198)$.\n",
+    "\n",
+    "$$X \\sim N(1,3^2)$$"
    ]
   },
   {
@@ -773,7 +774,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`norm.interval` returns endpoints of the range that contains alpha percent of the distribution. For example, with $X \\sim N(0,1^2)$ to find 95% of the probability, the following returns x values around the mean, in this case $\\mu=0$."
+    "`norm.interval` returns endpoints of the range that contains alpha percent of the distribution. For example, with a mean of 0 and a standard deviation of 1 to find 95% of the probability, `norm.interval` returns x values around the mean, in this case, $\\mu=0$.\n",
+    "\n",
+    "$$X \\sim N(0,1^2)$$"
    ]
   },
   {
@@ -835,9 +838,9 @@
    "source": [
     "#  Multivariate Normal Distribution\n",
     "\n",
-    "The multivariate normal distribution is often used to describe, at least approximately, any set of (possibly) correlated real-valued random variables each of which clusters around a mean value. \n",
+    "The multivariate normal distribution is often used to describe any set of correlated real-valued random variables. \n",
     "\n",
-    "We use `multivariate_normal` which require the array of mean and covariance matrix. To make it simple, we use a diagonal matrix which all off-diagonal elements are zero. "
+    "We use `multivariate_normal` which requires the array of mean and covariance matrix. To make it simple, we use a diagonal matrix which all off-diagonal elements are zero. "
    ]
   },
   {
@@ -892,7 +895,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can create a 3D graph using matplotlib's [`mpl_toolkits.mplot3d.Axes3D`](https://matplotlib.org/api/_as_gen/mpl_toolkits.mplot3d.axes3d.Axes3D.html). We also use [Scipy frozen RV object](https://docs.scipy.org/doc/scipy/reference/tutorial/stats.html#freezing-a-distribution)."
+    "We can create a 3D graph using the matplotlib's [`mpl_toolkits.mplot3d.Axes3D`](https://matplotlib.org/api/_as_gen/mpl_toolkits.mplot3d.axes3d.Axes3D.html). We also use [Scipy frozen RV object](https://docs.scipy.org/doc/scipy/reference/tutorial/stats.html#freezing-a-distribution)."
    ]
   },
   {
@@ -948,7 +951,7 @@
    "source": [
     "# Standard normal distribution\n",
     "\n",
-    "When $\\mu=0$ and $\\sigma^2=1$, it is called the standard normal distribution. The above probability function is simplified to:\n",
+    "When $\\mu=0$ and variance=1, it is called the standard normal distribution. The above probability function is simplified to:\n",
     "\n",
     "$$\n",
     "\\phi(x)=\\frac{1}{\\sqrt{2\\pi}}e^{\\frac{-x^2}{2}}\\\\\n",
@@ -964,7 +967,8 @@
    "source": [
     "## Standardized normal variable\n",
     "\n",
-    "To standardize a random variable $X \\sim N(\\mu, \\sigma^2)$ into the standardized normal variable $Z \\sim N(0,1)$ you use the transformation\n",
+    "To standardize a random variable $X \\sim N(\\mu, \\sigma^2)$ into the standardized normal variable $Z \\sim N(0,1)$ we use the transformation:\n",
+    "\n",
     "$$\n",
     "Z=\\frac{x-\\mu}{\\sigma}\n",
     "$$\n",
@@ -978,7 +982,12 @@
    "source": [
     "## Finding the standard normal value\n",
     "\n",
-    "For example, to find the standardized value for $x=1$ when $X \\sim N(2,3^2)$ can be found: $$Z=\\frac{1-2}{3}$$"
+    "For example, to find the standardized value for $x=1$ when a mean of 2 and a standard deviation of 3.\n",
+    "\n",
+    "$$\n",
+    "\\text{For }X \\sim N(2,3^2)\\\\\n",
+    "Z=\\frac{1-2}{3}\n",
+    "$$"
    ]
   },
   {
@@ -1054,7 +1063,8 @@
    "metadata": {},
    "source": [
     "# Conclusion\n",
-    "\n"
+    "\n",
+    "I posted all the codes for the graph and hope it helps your matplotlib skills. "
    ]
   },
   {
