--- a/Normal_distribution.ipynb
+++ b/Normal_distribution.ipynb
@@ -174,7 +174,7 @@
    "source": [
     "## Normal distribution PDF with different standard deviations\n",
     "\n",
-    "Let's plot normal distribution probability distribution functions where mean has different standard deviations."
+    "Let's plot probability distribution functions of a normal distribution where the mean has different standard deviations."
    ]
   },
   {
@@ -224,7 +224,7 @@
    "source": [
     "## Normal distribution PDF with different means\n",
     "\n",
-    "Let's plot normal distribution probability distribution functions where the standard deviation is 0 and different means."
+    "Let's plot probability distribution functions of normal distribution where the standard deviation is 0 and different means. "
    ]
   },
   {
@@ -259,6 +259,13 @@
     "ax.legend(loc='best', frameon=True)\n",
     "ax.set_ylim(0,0.45)\n",
     "ax.grid(True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The mean of the distribution determines the location of the center of the graph. As you can see in the above graph, the shape of the graph does not change by changing the mean, but the graph is translated horizontally."
    ]
   },
   {
@@ -311,8 +318,10 @@
    "source": [
     "# Cumulative normal distribution function\n",
     "\n",
+    "The cumulative distribution function of a random variable X, evaluated at x, is the probability that X will take a value less than or equal to x. Since the normal distribution is a continuous distribution, the shaded area of the curve represents the probability that X is less or equal than x. \n",
+    "\n",
     "$$\n",
-    "F(x)=\\int \\limits _{-\\infty} ^{x}f(t)dt \\text{, where }x\\in \\mathbb{R}\n",
+    "P(X \\leq x)=F(x)=\\int \\limits _{-\\infty} ^{x}f(t)dt \\text{, where }x\\in \\mathbb{R}\n",
     "$$"
    ]
   },
@@ -954,7 +963,7 @@
     "When $\\mu=0$ and variance=1, it is called the standard normal distribution. The above probability function is simplified to:\n",
     "\n",
     "$$\n",
-    "\\phi(x)=\\frac{1}{\\sqrt{2\\pi}}e^{\\frac{-x^2}{2}}\\\\\n",
+    "\\Phi(x)=\\frac{1}{\\sqrt{2\\pi}}e^{\\frac{-x^2}{2}}\\\\\n",
     "Z \\sim N(0,1)\n",
     "$$\n",
     "\n",
@@ -1064,7 +1073,9 @@
    "source": [
     "# Conclusion\n",
     "\n",
-    "I posted all the codes for the graph and hope it helps your matplotlib skills. "
+    "[scipy.stats.norm](https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.norm.html) gives us parameters such as `loc` and `scale` to specifies the standard deviation. It also has a variety of methods and we explored `rvs`, `cdf`, `sf`, `ppf`, `interval`,and `isf` in this article.\n",
+    "\n",
+    "[Matplotlib](https://matplotlib.org/index.html) gives us easy but extensive tools to change very minute details of a figure including 3D. "
    ]
   },
   {
