--- a/Discover_the_strength_of_monotonic_relation.ipynb
+++ b/Discover_the_strength_of_monotonic_relation.ipynb
@@ -840,7 +840,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://gist.github.com/shinokada/af1c1ff0d722a779c95766b8983e5f98"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -852,8 +861,6 @@
     }
    ],
    "source": [
-    "# https://gist.github.com/shinokada/af1c1ff0d722a779c95766b8983e5f98\n",
-    "\n",
     "rs, pval = spearmanr(by_end_station)\n",
     "print('rs=%.6f' % (rs))"
    ]
