--- a/A_Measure_of_Linear_Relationship.ipynb
+++ b/A_Measure_of_Linear_Relationship.ipynb
@@ -261,9 +261,7 @@
    ],
    "source": [
     "df_x=data_t.iloc[:,0] \n",
-    "# print(df_x) # 5,7,12,16,20\n",
     "df_y=data_t.iloc[:,1]\n",
-    "# print(df_y) # 4,12,18,21,24\n",
     "slope, intercept, r_value, p_value, std_err = linregress(df_x,df_y)\n",
     "\n",
     "print(f'The equation of reegression line is y={slope:.3f}x+{intercept:.3f}.')\n",
@@ -474,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +497,7 @@
     }
    ],
    "source": [
-    "his_pop = pd.read_csv('https://raw.githubusercontent.com/shinokada/python-for-ib-diploma-mathematics/master/Data/historical_population.csv')\n",
+    "his_pop = pd.read_csv('http://bit.ly/2Szyfzt')\n",
     "print(his_pop.shape)\n",
     "print(his_pop.head())"
    ]
@@ -926,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1097,13 +1095,13 @@
        "4               NaN  11441.82        NaN   NaN  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lab_for = pd.read_csv('https://raw.githubusercontent.com/shinokada/python-for-ib-diploma-mathematics/master/Data/alfs_labour_force.csv')\n",
+    "lab_for = pd.read_csv('http://bit.ly/2UFh1n2')\n",
     "lab = lab_for[(lab_for.Country=='Australia')]\n",
     "lab.head()"
    ]
@@ -1188,7 +1186,6 @@
     }
    ],
    "source": [
-    "print(type(df_pop))\n",
     "from scipy.stats import pearsonr\n",
     "r, pval = pearsonr(df_pop,df_lab)\n",
     "print(r)\n",
