--- a/Normal_distribution.ipynb
+++ b/Normal_distribution.ipynb
@@ -2,16 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc": true
-   },
-   "source": [
-    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Introduction\" data-toc-modified-id=\"Introduction-1\">Introduction</a></span></li><li><span><a href=\"#Normal-Distribution-Probability-Density-Function\" data-toc-modified-id=\"Normal-Distribution-Probability-Density-Function-2\">Normal Distribution Probability Density Function</a></span><ul class=\"toc-item\"><li><span><a href=\"#norm.pdf-value\" data-toc-modified-id=\"norm.pdf-value-2.1\"><code>norm.pdf</code> value</a></span></li><li><span><a href=\"#Normal-distribution-PDF-with-different-standard-deviations\" data-toc-modified-id=\"Normal-distribution-PDF-with-different-standard-deviations-2.2\">Normal distribution PDF with different standard deviations</a></span></li><li><span><a href=\"#Normal-distribution-PDF-with-different-means\" data-toc-modified-id=\"Normal-distribution-PDF-with-different-means-2.3\">Normal distribution PDF with different means</a></span></li></ul></li><li><span><a href=\"#Using-random-normal-distribution-values\" data-toc-modified-id=\"Using-random-normal-distribution-values-3\">Using random normal distribution values</a></span></li><li><span><a href=\"#Cumulative-normal-distribution-function\" data-toc-modified-id=\"Cumulative-normal-distribution-function-4\">Cumulative normal distribution function</a></span></li><li><span><a href=\"#Calculating-probability-of-normal-distribution\" data-toc-modified-id=\"Calculating-probability-of-normal-distribution-5\">Calculating probability of normal distribution</a></span><ul class=\"toc-item\"><li><span><a href=\"#Interval-between-variables\" data-toc-modified-id=\"Interval-between-variables-5.1\">Interval between variables</a></span></li></ul></li><li><span><a href=\"#Finding-quantiles\" data-toc-modified-id=\"Finding-quantiles-6\">Finding quantiles</a></span><ul class=\"toc-item\"><li><span><a href=\"#Percent-point-function\" data-toc-modified-id=\"Percent-point-function-6.1\">Percent point function</a></span></li><li><span><a href=\"#Inverse-survival-function\" data-toc-modified-id=\"Inverse-survival-function-6.2\">Inverse survival function</a></span></li><li><span><a href=\"#Interval-around-the-mean\" data-toc-modified-id=\"Interval-around-the-mean-6.3\">Interval around the mean</a></span></li></ul></li><li><span><a href=\"#Multivariate-Normal-Distribution\" data-toc-modified-id=\"Multivariate-Normal-Distribution-7\">Multivariate Normal Distribution</a></span></li><li><span><a href=\"#Standard-normal-distribution\" data-toc-modified-id=\"Standard-normal-distribution-8\">Standard normal distribution</a></span><ul class=\"toc-item\"><li><span><a href=\"#Standardized-normal-variable\" data-toc-modified-id=\"Standardized-normal-variable-8.1\">Standardized normal variable</a></span></li><li><span><a href=\"#Finding-the-standard-normal-value\" data-toc-modified-id=\"Finding-the-standard-normal-value-8.2\">Finding the standard normal value</a></span></li></ul></li><li><span><a href=\"#Conclusion\" data-toc-modified-id=\"Conclusion-9\">Conclusion</a></span></li><li><span><a href=\"#References\" data-toc-modified-id=\"References-10\">References</a></span></li></ul></div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Introduction\n",
@@ -1088,6 +1078,112 @@
     "- http://kaisk.hatenadiary.com/entry/2015/02/17/192955\n",
     "- https://stackoverflow.com/questions/38698277/plot-normal-distribution-in-3d"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "    @media print {\n",
+       "      div.input {\n",
+       "        display: none;\n",
+       "      }\n",
+       "\n",
+       "      div.output_prompt {\n",
+       "        display: none;\n",
+       "      }\n",
+       "\n",
+       "      div#notebook p,\n",
+       "      div#notebook,\n",
+       "      div#notebook li,\n",
+       "      p {\n",
+       "        font-size: 11pt;\n",
+       "      }\n",
+       "\n",
+       "      .rendered_html h1 {\n",
+       "        font-size: 16pt;\n",
+       "        margin: 5pt 0 0 0;\n",
+       "      }\n",
+       "\n",
+       "      .rendered_html h2 {\n",
+       "        font-size: 14pt;\n",
+       "        margin: 3pt 0 0 0;\n",
+       "      }\n",
+       "\n",
+       "      .rendered_html h3 {\n",
+       "        font-size: 13pt;\n",
+       "        margin: 2pt 0 0 0;\n",
+       "      }\n",
+       "\n",
+       "\n",
+       "    }\n",
+       "\n",
+       "    @page {\n",
+       "      size: A4;\n",
+       "    }\n",
+       "  </style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "<style>\n",
+    "    @media print {\n",
+    "      div.input {\n",
+    "        display: none;\n",
+    "      }\n",
+    "\n",
+    "      div.output_prompt {\n",
+    "        display: none;\n",
+    "      }\n",
+    "\n",
+    "      div#notebook p,\n",
+    "      div#notebook,\n",
+    "      div#notebook li,\n",
+    "      p {\n",
+    "        font-size: 11pt;\n",
+    "      }\n",
+    "\n",
+    "      .rendered_html h1 {\n",
+    "        font-size: 16pt;\n",
+    "        margin: 5pt 0 0 0;\n",
+    "      }\n",
+    "\n",
+    "      .rendered_html h2 {\n",
+    "        font-size: 14pt;\n",
+    "        margin: 3pt 0 0 0;\n",
+    "      }\n",
+    "\n",
+    "      .rendered_html h3 {\n",
+    "        font-size: 13pt;\n",
+    "        margin: 2pt 0 0 0;\n",
+    "      }\n",
+    "\n",
+    "\n",
+    "    }\n",
+    "\n",
+    "    @page {\n",
+    "      size: A4;\n",
+    "    }\n",
+    "  </style>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1116,7 +1212,7 @@
    "skip_h1_title": false,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
-   "toc_cell": true,
+   "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": true
