--- a/Variance & Covariance & Correlation.ipynb
+++ b/Variance & Covariance & Correlation.ipynb
@@ -2,16 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Everything-you-need-to-know-about-Variance\" data-toc-modified-id=\"Everything-you-need-to-know-about-Variance-1\">Everything you need to know about Variance</a></span><ul class=\"toc-item\"><li><span><a href=\"#Variance-beginners\" data-toc-modified-id=\"Variance-beginners-1.1\">Variance beginners</a></span></li></ul></li><li><span><a href=\"#Introduction\" data-toc-modified-id=\"Introduction-2\">Introduction</a></span></li><li><span><a href=\"#Sample-variance\" data-toc-modified-id=\"Sample-variance-3\">Sample variance</a></span></li><li><span><a href=\"#Standard-variance\" data-toc-modified-id=\"Standard-variance-4\">Standard variance</a></span><ul class=\"toc-item\"><li><span><a href=\"#TI-nspire\" data-toc-modified-id=\"TI-nspire-4.1\">TI-nspire</a></span></li></ul></li><li><span><a href=\"#Covariance\" data-toc-modified-id=\"Covariance-5\">Covariance</a></span></li><li><span><a href=\"#Correlation\" data-toc-modified-id=\"Correlation-6\">Correlation</a></span></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Everything you need to know about Variance\n",
-    "## Variance beginners\n",
+    "## Variance for beginners\n",
     "\n",
     "# Introduction\n",
-    "\n",
-    "- Sample variance\n",
-    "- Standard variance\n",
-    "- \n",
     "\n",
     "\n",
     "\n",
@@ -134,18 +140,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Covariance"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Correlation"
+   ]
   },
   {
    "cell_type": "code",
@@ -176,15 +182,15 @@
   "toc": {
    "base_numbering": 1,
    "nav_menu": {},
-   "number_sections": true,
+   "number_sections": false,
    "sideBar": true,
    "skip_h1_title": false,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
-   "toc_cell": false,
+   "toc_cell": true,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
