--- a/Normal_distribution.ipynb
+++ b/Normal_distribution.ipynb
@@ -1081,51 +1081,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style>\n",
-       "    @media print {\n",
-       "      div.input {\n",
-       "        display: none;\n",
-       "      }\n",
+       "  div.input {\n",
+       "      display: none;\n",
+       "      padding: 0;\n",
+       "    }\n",
        "\n",
-       "      div.output_prompt {\n",
-       "        display: none;\n",
-       "      }\n",
+       "    div.output_prompt {\n",
+       "      display: none;\n",
+       "      padding: 0;\n",
+       "    }\n",
        "\n",
-       "      div#notebook p,\n",
-       "      div#notebook,\n",
-       "      div#notebook li,\n",
-       "      p {\n",
-       "        font-size: 11pt;\n",
-       "      }\n",
+       "    div.text_cell {\n",
+       "      padding: 0;\n",
+       "      margin: 0;\n",
+       "    }\n",
        "\n",
-       "      .rendered_html h1 {\n",
-       "        font-size: 16pt;\n",
-       "        margin: 5pt 0 0 0;\n",
-       "      }\n",
+       "    div.text_cell_render {\n",
+       "      padding: 1pt;\n",
+       "    }\n",
        "\n",
-       "      .rendered_html h2 {\n",
-       "        font-size: 14pt;\n",
-       "        margin: 3pt 0 0 0;\n",
-       "      }\n",
+       "    div#notebook p,\n",
+       "    div#notebook,\n",
+       "    div#notebook li,\n",
+       "    p {\n",
+       "      font-size: 11pt;\n",
+       "      line-height: 135%;\n",
+       "      margin: 0;\n",
+       "    }\n",
        "\n",
-       "      .rendered_html h3 {\n",
-       "        font-size: 13pt;\n",
-       "        margin: 2pt 0 0 0;\n",
-       "      }\n",
+       "    .rendered_html h1,\n",
+       "    .rendered_html h1:first-child {\n",
+       "      font-size: 16pt;\n",
+       "      margin: 7pt 0;\n",
+       "    }\n",
        "\n",
+       "    .rendered_html h2,\n",
+       "    .rendered_html h2:first-child {\n",
+       "      font-size: 14pt;\n",
+       "      margin: 6pt 0;\n",
+       "    }\n",
        "\n",
+       "    .rendered_html h3,\n",
+       "    .rendered_html h3:first-child {\n",
+       "      font-size: 13pt;\n",
+       "      margin: 6pt 0;\n",
+       "    }\n",
+       "\n",
+       "    div.output_subarea {\n",
+       "      padding: 0;\n",
+       "    }\n",
+       "    \n",
+       "    div.output_wrapper {\n",
+       "      margin-left:100px;\n",
        "    }\n",
        "\n",
        "    @page {\n",
        "      size: A4;\n",
        "    }\n",
-       "  </style>\n"
+       "</style>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -1138,44 +1158,59 @@
    "source": [
     "%%html\n",
     "<style>\n",
-    "    @media print {\n",
-    "      div.input {\n",
-    "        display: none;\n",
-    "      }\n",
+    "  div.input {\n",
+    "      display: none;\n",
+    "      padding: 0;\n",
+    "    }\n",
     "\n",
-    "      div.output_prompt {\n",
-    "        display: none;\n",
-    "      }\n",
+    "    div.output_prompt {\n",
+    "      display: none;\n",
+    "      padding: 0;\n",
+    "    }\n",
     "\n",
-    "      div#notebook p,\n",
-    "      div#notebook,\n",
-    "      div#notebook li,\n",
-    "      p {\n",
-    "        font-size: 11pt;\n",
-    "      }\n",
+    "    div.text_cell_render {\n",
+    "      padding: 1pt;\n",
+    "    }\n",
     "\n",
-    "      .rendered_html h1 {\n",
-    "        font-size: 16pt;\n",
-    "        margin: 5pt 0 0 0;\n",
-    "      }\n",
+    "    div#notebook p,\n",
+    "    div#notebook,\n",
+    "    div#notebook li,\n",
+    "    p {\n",
+    "      font-size: 11pt;\n",
+    "      line-height: 135%;\n",
+    "      margin: 0;\n",
+    "    }\n",
     "\n",
-    "      .rendered_html h2 {\n",
-    "        font-size: 14pt;\n",
-    "        margin: 3pt 0 0 0;\n",
-    "      }\n",
+    "    .rendered_html h1,\n",
+    "    .rendered_html h1:first-child {\n",
+    "      font-size: 16pt;\n",
+    "      margin: 7pt 0;\n",
+    "    }\n",
     "\n",
-    "      .rendered_html h3 {\n",
-    "        font-size: 13pt;\n",
-    "        margin: 2pt 0 0 0;\n",
-    "      }\n",
+    "    .rendered_html h2,\n",
+    "    .rendered_html h2:first-child {\n",
+    "      font-size: 14pt;\n",
+    "      margin: 6pt 0;\n",
+    "    }\n",
     "\n",
+    "    .rendered_html h3,\n",
+    "    .rendered_html h3:first-child {\n",
+    "      font-size: 13pt;\n",
+    "      margin: 6pt 0;\n",
+    "    }\n",
     "\n",
+    "    div.output_subarea {\n",
+    "      padding: 0;\n",
+    "    }\n",
+    "    \n",
+    "    div.output_wrapper {\n",
+    "      margin-left:100px;\n",
     "    }\n",
     "\n",
     "    @page {\n",
     "      size: A4;\n",
     "    }\n",
-    "  </style>\n"
+    "</style>\n"
    ]
   },
   {
@@ -1215,7 +1250,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
