--- a/7_Essential_Tips_for Writing_with_Jupyter_Notebook.ipynb
+++ b/7_Essential_Tips_for Writing_with_Jupyter_Notebook.ipynb
@@ -888,8 +888,152 @@
     "\n",
     "Once you are done with your writing and if you want to export to PDF file, you can print out as PDF.\n",
     "\n",
-    "[Stackoverflow](https://stackoverflow.com/questions/34818723/export-notebook-to-pdf-without-code)\n",
+    "There are several ways to do this. But I came up with method which is the easiest and flexible."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You need to copy and paste the following code into one of your cell. When you run it, the code blocks and Output blocks will be removed. Headings paddings and margins are adjusted for printing. By refreshing the browser, you will see all the codes again. You can adjust whatever you like using this method. I found that using "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       " <style>\n",
+       "    @media print { \n",
+       "    div.input {\n",
+       "      display: none;\n",
+       "      padding: 0;\n",
+       "    }\n",
+       "\n",
+       "    div.output_prompt {\n",
+       "      display: none;\n",
+       "      padding: 0;\n",
+       "    }\n",
+       "\n",
+       "    div.text_cell {\n",
+       "      padding: 0;\n",
+       "      margin: 0;\n",
+       "    }\n",
+       "\n",
+       "    div.text_cell_render {\n",
+       "      padding: 1pt;\n",
+       "    }\n",
+       "\n",
+       "    div#notebook p,\n",
+       "    div#notebook,\n",
+       "    div#notebook li,\n",
+       "    p {\n",
+       "      font-size: 11pt;\n",
+       "      line-height: 135%;\n",
+       "      margin: 0;\n",
+       "    }\n",
+       "\n",
+       "    .rendered_html h1,\n",
+       "    .rendered_html h1:first-child {\n",
+       "      font-size: 16pt;\n",
+       "      margin: 7pt 0;\n",
+       "    }\n",
+       "\n",
+       "    .rendered_html h2,\n",
+       "    .rendered_html h2:first-child {\n",
+       "      font-size: 14pt;\n",
+       "      margin: 6pt 0;\n",
+       "    }\n",
+       "\n",
+       "    .rendered_html h3,\n",
+       "    .rendered_html h3:first-child {\n",
+       "      font-size: 13pt;\n",
+       "      margin: 6pt 0;\n",
+       "    }\n",
+       "\n",
+       "    div.output_subarea {\n",
+       "      padding: 0;\n",
+       "    }\n",
+       "\n",
+       "     }\n",
+       "\n",
+       "    @page {\n",
+       "      size: A4;\n",
+       "    }\n",
+       "  </styl\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    " <style>\n",
+    "    @media print { \n",
+    "    div.input {\n",
+    "      display: none;\n",
+    "      padding: 0;\n",
+    "    }\n",
     "\n",
+    "    div.output_prompt {\n",
+    "      display: none;\n",
+    "      padding: 0;\n",
+    "    }\n",
+    "\n",
+    "    div.text_cell_render {\n",
+    "      padding: 1pt;\n",
+    "    }\n",
+    "\n",
+    "    div#notebook p,\n",
+    "    div#notebook,\n",
+    "    div#notebook li,\n",
+    "    p {\n",
+    "      font-size: 11pt;\n",
+    "      line-height: 135%;\n",
+    "      margin: 0;\n",
+    "    }\n",
+    "\n",
+    "    .rendered_html h1,\n",
+    "    .rendered_html h1:first-child {\n",
+    "      font-size: 16pt;\n",
+    "      margin: 7pt 0;\n",
+    "    }\n",
+    "\n",
+    "    .rendered_html h2,\n",
+    "    .rendered_html h2:first-child {\n",
+    "      font-size: 14pt;\n",
+    "      margin: 6pt 0;\n",
+    "    }\n",
+    "\n",
+    "    .rendered_html h3,\n",
+    "    .rendered_html h3:first-child {\n",
+    "      font-size: 13pt;\n",
+    "      margin: 6pt 0;\n",
+    "    }\n",
+    "\n",
+    "    div.output_subarea {\n",
+    "      padding: 0;\n",
+    "    }\n",
+    "\n",
+    "     }\n",
+    "\n",
+    "    @page {\n",
+    "      size: A4;\n",
+    "    }\n",
+    "  </styl"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "* Run Jupyter Notebook in the browser then go to File->Download as->HTML and you will get an HTML page with code and output.\n",
     "\n",
     "![download as](image/downloadas.png)\n",
@@ -1002,6 +1146,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.6"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
