--- a/7_Essential_Tips_for Writing_with_Jupyter_Notebook.ipynb
+++ b/7_Essential_Tips_for Writing_with_Jupyter_Notebook.ipynb
@@ -895,7 +895,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You need to copy and paste the following code into one of your cell. When you run it, the code blocks and Output blocks will be removed. Headings paddings and margins are adjusted for printing. By refreshing the browser, you will see all the codes again. You can adjust whatever you like using this method. I found that using "
+    "You need to copy and paste the following code into one of your cell. Then go to File, Print Preview. The code blocks and Output blocks will be removed. Headings paddings and margins are adjusted for printing. You can adjust the codes whatever you like using this method.\n",
+    "\n",
+    "I found that Raw NBConvert block will have no div or class in a print view, so it is hard to control the blocks. I recommend not using Raw NBConvert for printing."
    ]
   },
   {
@@ -1034,60 +1036,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Run Jupyter Notebook in the browser then go to File->Download as->HTML and you will get an HTML page with code and output.\n",
-    "\n",
-    "![download as](image/downloadas.png)\n",
-    "\n",
-    "* Open the exported HTML with browser and activate the browser console with key F12 or &#8984; + i.\n",
-    "\n",
-    "![console](image/console.png)\n",
-    "\n",
-    "## Removing code blocks\n",
-    "\n",
-    "* Run following command in the console:"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "document.querySelectorAll(\"div.input\").forEach(function(a){a.remove()})"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![console](image/console2.png)\n",
-    "\n",
-    "The code removes all input div DOM.\n",
-    "\n",
-    "## Removing Out blocks\n",
-    "\n",
-    "* We need to remove [Out] blocks as well.\n",
-    "\n",
-    "![Out image](./image/out.png)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "document.querySelectorAll(\"div.output_prompt\").forEach(function(a){a.innerHTML=''})"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![After removing all Out blocks](./image/out2.png)\n",
-    "\n",
-    "\n",
-    "* Then right mouse button and choose \"Save Page As\" and Save the \"Complete page\" (not single page).\n",
-    "\n",
-    "![console](image/save.png)\n",
-    "\n",
-    "* Open the saved html and File > Print...\n",
+    "Use the browser print, File > Print.\n",
     "\n",
     "You need to select --blank-- in Page Headers and Page Footers.\n",
     "\n",
