--- a/7_Essential_Tips_for Writing_with_Jupyter_Notebook.ipynb
+++ b/7_Essential_Tips_for Writing_with_Jupyter_Notebook.ipynb
@@ -888,14 +888,14 @@
     "\n",
     "Once you are done with your writing and if you want to export to PDF file, you can print out as PDF.\n",
     "\n",
-    "There are several ways to do this. But I came up with method which is the easiest and flexible."
+    "There are several ways to do this. But I came up with a method that is the easiest and flexible."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You need to copy and paste the following code into one of your cell. Then go to File, Print Preview. The code blocks and Output blocks will be removed. Headings paddings and margins are adjusted for printing. You can adjust the codes whatever you like using this method.\n",
+    "You need to copy and paste the following code into one of your cells. Then go to File, Print Preview. The code blocks and Output blocks will be removed. Headings paddings and margins are adjusted for printing. You can adjust the codes whatever you like using this method.\n",
     "\n",
     "I found that Raw NBConvert block will have no div or class in a print view, so it is hard to control the blocks. I recommend not using Raw NBConvert for printing."
    ]
@@ -1029,16 +1029,14 @@
     "    @page {\n",
     "      size: A4;\n",
     "    }\n",
-    "  </styl"
+    "  </style>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use the browser print, File > Print.\n",
-    "\n",
-    "You need to select --blank-- in Page Headers and Page Footers.\n",
+    "Go to the browser print, File > Print, and you need to select --blank-- in Page Headers and Page Footers.\n",
     "\n",
     "![print out](./image/print.png)\n",
     "\n",
