--- a/7_Essential_Tips_for Writing_with_Jupyter_Notebook.ipynb
+++ b/7_Essential_Tips_for Writing_with_Jupyter_Notebook.ipynb
@@ -13,11 +13,11 @@
     "* Help, Shortcuts and Number lines\n",
     "* Theme and Fonts\n",
     "* Markdown\n",
-    "* LaTeX\n",
+    "* How to write LaTeX in Jupyter\n",
     "* LaTeX Equation Numbering & Alignment\n",
     "* Writing tools\n",
     "* Table of Contents \n",
-    "* Removing Code Blocks and Printing PDF\n",
+    "* How to print out from Jupyter Notebook without code blocks\n",
     "* Conclusion\n",
     "* References\n",
     "\n",
@@ -175,7 +175,7 @@
     "### Method two\n",
     "\n",
     "If you do not want to change the theme but want to change the font size and font, then you need to change the Jupyter Notebook\n",
-    "CSS. Open `.jupyter\\custom\\custom.css` in an editor. If you don't have an editor, please install the [VS code](https://code.visualstudio.com/download).\n",
+    "CSS. Open `.jupyter/custom/custom.css` in an editor. If you don't have an editor, please install the [VS code](https://code.visualstudio.com/download).\n",
     "\n",
     "And paste the following to the file. You can change `font-size:130%` to any number as you like."
    ]
@@ -884,7 +884,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Removing Code Blocks and Printing PDF\n",
+    "# How to print out from Jupyter Notebook without code blocks\n",
     "\n",
     "Once you are done with your writing and if you want to export to PDF file, you can print out as PDF.\n",
     "\n",
