--- a/A_Measure_of_Linear_Relationship.ipynb
+++ b/A_Measure_of_Linear_Relationship.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "loss  4  12  18  21  24"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,8 +225,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Finding the regression line and Pearson's coefficient"
+    "# Finding the regression line"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -274,6 +284,442 @@
    "metadata": {},
    "source": [
     "# Finding the Pearson's correlation coefficient"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## For population data\n",
+    "\n",
+    "Pearson's product-moment correlation coefficient for two sets of population data, x and y, is:\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "\\rho_{x,y}= \\frac{cov(x,y)}{\\sigma _x \\sigma _y} \\tag{1-1}\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "where cov is the covariance and $\\sigma_x$ and $\\sigma_y$ are the population standard deviatios of x and y.\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "cov(x,y)=\\frac{1}{n}\\sum \\limits _{i=1} ^{n} (x_i -\\mu _x)(y_i-\\mu _y) \\tag{1-2}\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "where $\\mu _x$ is the mean of x and $\\mu _y$ is the mean of y.\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "\\sigma_x=\\sqrt{\\frac{\\sum \\limits _{i=1} ^{n} (x _i - \\mu _x)^2}{n}} \\tag{1-3}\\\\\n",
+    "\\sigma_y=\\sqrt{\\frac{\\sum \\limits _{i=1} ^{n} (y _i - \\mu _y)^2}{n}} \\tag{1-4}\\\\\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "## For sample data\n",
+    "\n",
+    "Pearson's product-moment correlation coefficient for two sets of sample data, x and y, is:\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "r_{xy}=\\frac{s_{xy}}{s_x s_y} \\tag{2-1} \\\\\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "where $s_{xy}$ is the covariance and $s_x$ and $s_y$ are the sample standard deviatios of x and y.\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "s_{xy}= \\sum \\limits _{i=1} ^{n} \\frac{(x_i -\\bar  x)(y_i-\\bar y)}{n-1}\\tag{2-2} \\\\\n",
+    "s_x=\\sqrt{\\frac{\\sum \\limits _{i=1} ^{n} (x_i - \\bar x)^2}{n-1}} \\tag{2-3}\\\\\n",
+    "s_y=\\sqrt{\\frac{\\sum \\limits _{i=1} ^{n} (y_i - \\bar y)^2}{n-1}}\\tag{2-4} \\\\\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "Therefore\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "r_{xy}=\\frac{\\sum \\limits _{i=1} ^{n}(x _i -\\bar x)(y-\\bar y)}\n",
+    "{\\sqrt{\\sum \\limits _{i=1} ^{n} (x_i - \\bar x)^2} \\sqrt{\\sum \\limits _{i=1} ^{n} (y_i - \\bar y)^2}} \\tag{2-5}\n",
+    "\\end{align}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's use sample data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>gain</th>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>loss</th>\n",
+       "      <td>4</td>\n",
+       "      <td>12</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      0   1   2\n",
+       "gain  5   7  12\n",
+       "loss  4  12  17"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(\n",
+    "    [\n",
+    "        [5,7,12],\n",
+    "        [4,12,17]\n",
+    "    ],\n",
+    "    index=['gain','loss'])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Means of gain and loss are:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.0\n",
+      "11.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "gain_mean, loss_mean=df.T.mean()\n",
+    "print(gain_mean)\n",
+    "print(loss_mean)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Standard deviations are:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.943920288775949\n",
+      "5.354126134736337\n",
+      "8.666666666666666\n",
+      "28.666666666666664\n"
+     ]
+    }
+   ],
+   "source": [
+    "gain_std, loss_std = df.T.std(ddof=0)\n",
+    "print(gain_std)\n",
+    "print(loss_std)\n",
+    "print(gain_std**2)\n",
+    "print(loss_std**2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`ddf=0` is for population and `ddf=1` is for sample. Since we use all data we use 0 here."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Understanding numpy covariance matrix\n",
+    "\n",
+    "When you use `numpy.cov`, it returns a covariance matrix. It is a square matrix. The covariance matrix element $C_{ij}$ is the covariance of $x$ and $y$. The element $C_{ii}$ is the variance of $x_i$.\n",
+    "\n",
+    "For example if you calculate covariance of two s:\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 8.66666667 14.66666667]\n",
+      " [14.66666667 28.66666667]]\n",
+      "[ 8.66666667 28.66666667]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cov_xy=np.cov([num[0],num[1]],ddof=0)\n",
+    "print(cov_xy)\n",
+    "print(np.var(x, axis=1, ddof=0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.82476212, 1.39575128],\n",
+       "       [1.39575128, 2.72805933]])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "cov_xy/(gain_std * loss_std)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mathematically\n",
+    "\n",
+    "$$\n",
+    "\\frac{(5-8)(4-11)+(7-8)(12-11)+(12-8)(17-11)}{3}=14.67 \\\\\n",
+    "\\frac{14.67}{15.76}=0.9305\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14.666666666666666\n",
+      "15.762120556715852\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9305008557631899"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "m_cov=((5.0-8)*(4.0-11)+(7.0-8)*(12.0-11)+(12.0-8)*(17.0-11))/3.0\n",
+    "print(m_cov)\n",
+    "\n",
+    "sxsy=gain_std*loss_std\n",
+    "print(sxsy)\n",
+    "\n",
+    "m_cov/sxsy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creating arrays from the dataFrame."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 5  7 12]\n",
+      "[ 4 12 17]\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = df.to_numpy()\n",
+    "print(num[0])\n",
+    "print(num[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gain</th>\n",
+       "      <th>loss</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>gain</th>\n",
+       "      <td>13.0</td>\n",
+       "      <td>22.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>loss</th>\n",
+       "      <td>22.0</td>\n",
+       "      <td>43.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      gain  loss\n",
+       "gain  13.0  22.0\n",
+       "loss  22.0  43.0"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "df.T.cov()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9305008557631899"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from numpy import corrcoef\n",
+    "corrcoef(num[0],num[1])[0,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9305008557631897"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r, pval = pearsonr(df.T.iloc[:,0],df.T.iloc[:,1])\n",
+    "r"
    ]
   },
   {
@@ -1452,6 +1898,20 @@
    "source": [
     "- https://seaborn.pydata.org/generated/seaborn.heatmap.html"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- https://datascienceplus.com/understanding-the-covariance-matrix/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
