--- a/List_of_Data_sources.ipynb
+++ b/List_of_Data_sources.ipynb
@@ -10,6 +10,7 @@
     "\n",
     "## General\n",
     "\n",
+    "- [Dryad](https://datadryad.org/search)\n",
     "- [Google](https://toolbox.google.com/datasetsearch)\n",
     "- [Data world, finance, crime, economy, Twitter, NASA](https://data.world/)\n",
     "- [Gapminder](https://www.gapminder.org/data/)\n",
@@ -72,15 +73,8 @@
     "\n",
     "## Transportation\n",
     "\n",
-    "- [USA](https://data.transportation.gov/) (https://data.transportation.gov/)"
+    "- [USA](https://data.transportation.gov/) (https://data.transportation.gov/)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
