--- a/A_Measure_of_Linear_Relationship.ipynb
+++ b/A_Measure_of_Linear_Relationship.ipynb
@@ -300,7 +300,7 @@
     "\\end{align}\n",
     "$$\n",
     "\n",
-    "where cov is the covariance and $\\sigma_x$ and $\\sigma_y$ are the population standard deviatios of x and y.\n",
+    "where cov is the covariance and $\\sigma_x$ and $\\sigma_y$ are the population standard deviations of x and y.\n",
     "\n",
     "$$\n",
     "\\begin{align}\n",
